--- a/style.css
+++ b/style.css
@@ -5,6 +5,15 @@ html, body {
 	background-color: #d8c0c0
 }
 
+@font-face {
+    font-family: yeezy_tstar-heavy-webfont;
+    src: url(yeezy_tstar-heavy-webfont.woff);
+}
+
+a:hover {
+	color: #bb8a74;
+}
+
 .container {
 	max-width: 1500px;
 	margin: 0 auto;
@@ -12,20 +21,28 @@ html, body {
 }
 
 .header {
-  background-color: #d8c0c0;
+  /*background-color: #d8c0c0; */
+  z-index: 999;
+  height: 100px;
 }
 
 .nav {
   list-style-type: none;
   margin: 0;
-  padding: 20px 0;
+  padding-top: 20px;
+  text-decoration: none;
+}
+
+.nav p {
+  margin-left: 15px;
+  padding-top: 0px;
 }
 
 .nav li {
   color: #C49587;
-  display: inline;
+  display: inline block;
   float: right;
-  font-family: 'Swis721 BlkCn BT', sans-serif;
+  font-family: 'yeezy_tstar-heavy-webfont', sans-serif;
   font-weight: 600;
   font-size: 12px;
   margin-right: 25px;
@@ -34,13 +51,13 @@ html, body {
 
 .main {
 	position: relative;
-	top: 120px;
+	top: 10px;
 	text-align: center;
 }
 
 .main h1 {
   color: #C49587;
-  font-family: 'Swis721 BlkCn BT', sans-serif;
+  font-family: 'yeezy_tstar-heavy-webfont', sans-serif;
   font-weight: 600;
   font-size: 120px;
   margin-top: 0;
@@ -56,12 +73,76 @@ img{
 	padding-right: 5px;
 }
 
-
-
 .btn{
 	color: #C49587;
-	font-family: 'Swis721 BlkCn BT', sans-serif;
-
+	font-family: 'yeezy_tstar-heavy-webfont', sans-serif;
 	padding-bottom: 120px;
 	text-decoration: none;
 }
+
+.backbtn {
+	color: #bb8a74;
+	font-family: 'yeezy_tstar-heavy-webfont', sans-serif;
+	text-decoration: none;
+	font-weight: 600;
+	font-size: 25px;
+	padding-top: 5px;
+}
+
+.picture{
+	width: 100px;
+	height: 100px;
+	padding: 25px, 25px, 25px, 25px;
+}
+
+.footer{
+	padding: 30px 0;
+}
+
+.footer p {
+	font-family: 'yeezy_tstar-heavy-webfont', serif;
+	color: #C49587;
+	font-size: 12px;
+	text-align: center;
+}
+
+.introBackground{
+  background-color: #C8AEA7;
+  background-size: cover;
+  height: 600px;
+}
+
+.bio {
+	width: 400px;
+	height: 400px;
+	font-size: 30px;
+	line-height: 1.5;
+	/*text-align: justify; */
+	font-family: 'yeezy_tstar-heavy-webfont', serif;
+	color: #d8c0c0;
+	padding-left: 100px;
+	padding-top: 0px;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
