adding project pictures

--- a/style.css
+++ b/style.css
@@ -189,6 +189,8 @@ img{
     display:block;
     position: relative;
     overflow:hidden;
+    width: 250px;
+    height: 250px;
 }
         
 /* If have the image layer */
@@ -199,6 +201,7 @@ img{
     border:none;
     transform:scale(1);
     transition:all 1s;
+    object-fit: cover;
 }
 
 #rig li:hover .rig-img {
@@ -236,7 +239,7 @@ img{
     text-transform:capitalize;
     font-size:18px;
     font-weight:bold;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'yeezy_tstar-heavy-webfont', sans-serif;
     font-weight:normal!important;
     top:40%;
     color:white;
