--- a/style.css
+++ b/style.css
@@ -50,6 +50,11 @@ a:hover {
     text-transform: uppercase;
   }
 
+  .nav img {
+    width: 25px;
+    height: 25px;
+  }
+
 .main {
 	position: relative;
 	top: 10px;
