--- a/style.css
+++ b/style.css
@@ -285,8 +285,9 @@ img{
   width: 40%;
   height: 75%;
   background-color: /*#bb8a74; */ #EBDAD6;
-  opacity: 0.9;
+  opacity: 0.95;
   visibility: hidden; 
+  border-radius: 8px;
   /*display: none;*/
 }
 
@@ -301,7 +302,7 @@ img{
 
    .popupbox h3 {
     font-size:25px;
-    font-family: 'yeezy_tstar-heavy-webfont', sans-serif;
+  font-family: 'Raleway', sans-serif;
     font-weight:normal!important;
     text-align: center;
     color: #bb8a74;
@@ -311,9 +312,11 @@ img{
   .popupbox p {
     font-size:18px;
     font-weight:bold;
-    font-family: 'Oswald', sans-serif;
+  font-family: 'Raleway', sans-serif;
     font-weight:normal!important;
     text-align: center;
+
+    color: #bb8a74;
  }
 
 
@@ -328,11 +331,16 @@ img{
     background-color: #fff;
   }
 
+  .textbox .p {
+    padding: 10px 10px 10px 10px;
+    text-align: center;
+  }
+
 
 
 /*FOOTER */
 .footer{
-  padding: 30px 0;
+  padding: 0;
 }
 
   .footer p {
